[package]
name = "ceno-host"
version = "0.1.0"
edition = "2024"

[dependencies]
ceno_common = { path = "../common" }
ceno_cli = { git = "https://github.com/scroll-tech/ceno.git", package = "cargo-ceno", branch = "master" }
ceno_host = { git = "https://github.com/scroll-tech/ceno.git", branch = "master" }
ceno_emul = { git = "https://github.com/scroll-tech/ceno.git", branch = "master" }
ceno_zkvm = { git = "https://github.com/scroll-tech/ceno.git", branch = "master" }
mpcs = { git = "https://github.com/scroll-tech/gkr-backend.git", tag = "v1.0.0-alpha.19" }
ff_ext = { git = "https://github.com/scroll-tech/gkr-backend.git", tag = "v1.0.0-alpha.19" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.1", default-features = false }
openvm-native-circuit = { git = "https://github.com/scroll-tech/openvm.git", branch = "feat/v1.4.1-scroll-ext", default-features = false }

cargo_metadata = "0.20"

# ceno_gpu = { git = "https://github.com/scroll-tech/ceno-gpu.git", branch = "master" }

[features]
default = []
# gpu = [dep:ceno_gpu]
